# ESP32_MP3_Decoder

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  README.rst  sdkconfig.defaults
components/MerusAudio/: CMakeLists.txt  MerusAudio.c
components/MerusAudio/include/: MerusAudio.h  ma120x0.h
components/aac_decoder/: aac_decoder.c
components/aac_decoder/include/: aac_decoder.h
components/audio_player/: CMakeLists.txt  audio_player.c
components/audio_player/include/: audio_player.h
components/audio_renderer/: CMakeLists.txt  audio_renderer.c
components/audio_renderer/include/: audio_renderer.h
components/bt_speaker/: CMakeLists.txt  bt_app_av.c  bt_app_core.c  bt_speaker.c  component.mk
components/bt_speaker/include/: bt_speaker.h
components/common/: CMakeLists.txt  common.c  common_buffer.c
components/common/include/: common.h  common_buffer.h  common_component.h  common_utils.h
components/controls/: CMakeLists.txt  controls.c
components/controls/include/: controls.h
components/fdk-aac/: CMakeLists.txt  component.mk
components/fdk-aac/libAACdec/src/: aacdecoder_lib.cpp
components/fdk-aac/libFDK/include/: FDK_archdef.h  abs.h  clz.h  fixmul.h
components/fdk-aac/libFDK/include/xtensa/: abs_xtensa.h  clz_xtensa.h  fixmul_xtensa.h
components/fdk-aac/libMpegTPDec/include/: tpdec_lib.h
components/fdk-aac/libMpegTPDec/src/: tpdec_adts.cpp  tpdec_asc.cpp
components/fdk-aac/libSBRdec/src/: sbrdecoder.cpp
components/fdk-aac_decoder/: CMakeLists.txt  fdk_aac_decoder.c
components/fdk-aac_decoder/include/: fdk_aac_decoder.h
components/fifo/: CMakeLists.txt  component.mk  spiram_fifo.c
components/fifo/include/: spiram.h  spiram_fifo.h
components/helix-aac/: aaccommon.h  aacdec.h  aactabs.c  assembly.h  bitstream.c  buffers.c  coder.h  component.mk  dct4.c  dequant.c  fft.c  filefmt.c  huffman.c  hufftabs.c  imdct.c  pns.c  sbr.c  sbr.h  sbrfreq.c  sbrhfadj.c  sbrhfgen.c  sbrhuff.c  sbrmath.c  sbrqmf.c  sbrtabs.c  stproc.c  tns.c  trigtabs.c  trigtabs_fltgen.c
components/helix-aac/docs/: callgraph_aac.doc  callgraph_sbr.doc  cpuusage.xls  memory.xls
components/helix-aac/include/: aacdec_port.h
components/helix_aac_decoder/: aac_decoder.c
components/http/: CMakeLists.txt  http.c
components/http/include/: http.h
components/inih_port/: CMakeLists.txt  component.mk
components/junk/: codecs.cpp  codecs.h  play_sd_aac.cpp  play_sd_aac.h
components/libfaad/: CMakeLists.txt  common.h  component.mk  ps_dec.c  sbr_dec.c  specrec.c
components/libfaad_decoder/: CMakeLists.txt  component.mk  libfaad_decoder.c
components/libfaad_decoder/include/: libfaad_decoder.h
components/libm4a/: CMakeLists.txt  component.mk  demux.c  m4a.c  m4a.h
components/libm4a/include/: m4a.h
components/mad/: CMakeLists.txt  frame.c  synth.c  synth.h  synth_stereo.c.unused
components/mdns_task/: mdns_task.c
components/mdns_task/include/: mdns_task.h
components/mp3_decoder/: CMakeLists.txt  mp3_decoder.c
components/mp3_decoder/include/: mp3_decoder.h
components/mp4_parser/: mp4_parser.c
components/mp4_parser/include/: mp4_parser.h
components/nghttp/: CMakeLists.txt
components/nghttp/include/nghttp2/: nghttp2ver.h
components/playlist/: CMakeLists.txt  playlist.c  playlist.pls
components/playlist/include/: playlist.h
components/ui/: CMakeLists.txt  ui.c
components/ui/include/: ui.h
components/url_parser/: CMakeLists.txt  url_parser.c
components/url_parser/include/: url_parser.h
components/user_driver/: CMakeLists.txt  component.mk  ws2812.c
components/user_driver/include/: ws2812.h
components/vector/: CMakeLists.txt  vector.c
components/vector/include/: vector.h
components/web_radio/: CMakeLists.txt  component.mk  web_radio.c
components/web_radio/include/: web_radio.h
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  component.mk  format_test.pls  playlist.pls  wifi.c
main/include/: app_main.h  playerconfig.h  wifi.h
